--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
          Copyright 2020 git training
 -->
 <head>
-	<title> Change Simple Title</title>
+	<title> Master Simple Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+		    Adding content in Master branch
 		</p>
 	</main>
 	<footer class="container">
