changes in branch trouble

--- a/simple.html
+++ b/simple.html
@@ -18,7 +18,7 @@
 	<!-- Content Goes Here -->
 		<p>
 		    Adding content in Master branch
-			this is on  branch master
+			this is on branch trouble
 		</p>
 	</main>
 	<footer class="container">
