--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Master Copyright Company 2014</p>
+		<p>&copy; Master Copyright Company 2014.Adding contents to copyright</p>
 	</footer>
 </body>
 </html>
