--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
          Copyright 2020 git training
 -->
 <head>
-	<title> Realwork Simple Title</title>
+	<title> Stashing Simple Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
